Period Optimiser boundary work